# Picaro

./: .gitignore  CMakeLists.txt  README.md  install.md  run.sh
qml/: DetailView.qml  EditSlider.qml  GeoMapView.qml  ImportDialog.qml  Main.qml  OverviewView.qml  PhotoEditView.qml  PhotoGridView.qml  PhotoInfoOverlay.qml  PhotoPanel.qml  ReceiveDialog.qml  SendSheet.qml  SettingsView.qml  SlideshowView.qml  TagFilterPanel.qml  TagsView.qml  ThumbnailPanel.qml  TimelineView.qml  ToolsView.qml
src/: AppSettings.h  GpuHeicDecoder.cpp  GpuHeicDecoder.h  HeicImageReader.cpp  HeicImageReader.h  NetworkManager.cpp  NetworkManager.h  OsmNamFactory.cpp  OsmNamFactory.h  PeerModel.h  PhotoDatabase.cpp  PhotoDatabase.h  PhotoEditorProvider.cpp  PhotoEditorProvider.h  PhotoImageProvider.cpp  PhotoImageProvider.h  PhotoImporter.cpp  PhotoImporter.h  PhotoModel.cpp  PhotoModel.h  StatsProvider.h  TagModel.cpp  TagModel.h  ThumbnailProvider.cpp  ThumbnailProvider.h  VideoFrameExtractor.cpp  VideoFrameExtractor.h  main.cpp
